@@ -145,6 +145,7 @@ LUFA_OPTS += -D VTARGET_SCALE_FACTOR=1
 #LUFA_OPTS += -D LIBUSB_DRIVER_COMPAT
 #LUFA_OPTS += -D XCK_RESCUE_CLOCK_ENABLE
 #LUFA_OPTS += -D INVERTED_ISP_MISO
+#LUFA_OPTS += -D FIRMWARE_VERSION_MINOR=0x11
 
 
 # Create the LUFA source path variables by including the LUFA root makefile
