@@ -87,7 +87,12 @@
  *    <td>LIBUSB_DRIVER_COMPAT</td>
  *    <td>Makefile LUFA_OPTS</td>
  *    <td>Define to switch to a non-standard endpoint scheme, breaking compatibility with AVRStudio under Windows but making
- *        the code compatible with software such as avrdude (all platforms) that use the libUSB driver.
+ *        the code compatible with software such as avrdude (all platforms) that use the libUSB driver.</td>
+ *   </tr>
+ *   <tr>
+ *    <td>FIRMWARE_VERSION_MINOR</td>
+ *    <td>Define to set the minor firmware revision nunber reported to the host on request. By default this will use a firmware version compatible
+ *        with the latest Atmel IDE version, however if desired the reported minor value can be adjusted here.</td>
  *   </tr>
  *  </table>
  */
